data/derived/sp14/progs/unify/prog4454.ml.out
Characters 80-89:
  | Sine x -> "sin(pi*" + exprToString x + ")"
              ^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         int
